--- a/Celebrity-Net-Worth.html
+++ b/Celebrity-Net-Worth.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Celebrity Net Worth Websites</title>
   <meta name="description" content="A simple celebrity net worth website.">
   <meta name="author" content="SitePoint">
-
+  <link rel="stylesheet" href="styles/layout.css" type="text/css">
   <meta property="og:title" content="Celebrity Net Worth Websites">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
