--- a/Celebrity-Net-Worth.html
+++ b/Celebrity-Net-Worth.html
@@ -8,7 +8,7 @@
   <title>Celebrity Net Worth Websites</title>
   <meta name="description" content="A simple celebrity net worth website.">
   <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="styles/layout.css" type="text/css">
+  <link rel="stylesheet" href="styles.css" type="text/css">
   <meta property="og:title" content="Celebrity Net Worth Websites">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
