--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://danielsacramanto.github.io/4a65sd4/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://samictg.ga/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <title>DOCUMENTS</title>
   </head>
