--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://samictg.ga/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-
+<link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>DOCUMENTS</title>
   </head>
   <body>
