--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container">
   <h1>DOCUMENTS</h1>
-      <p class="plist">
+      <p class="plist"><i class="fas fa-file-pdf"></i> 
       <a target="_blank" href="https://samictg.ga/certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE</a>
       </p>
-     <p class="plist">
+     <p class="plist"><i class="fas fa-file-pdf"></i> 
       <a target="_blank" href="https://samictg.ga/sanjid-hsc.pdf">SANJID HSC CERTIFICATE</a>
       </p>
       
