--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://samictg.ga/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/eae3602338.js" crossorigin="anonymous"></script>
     <title>DOCUMENTS</title>
   </head>
   <body>
