--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://samictg.ga/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/eae3602338.js" crossorigin="anonymous"></script>
-    <script src="jumpanimation.js" crossorigin="anonymous"></script>
+    <script src="https://samictg.ga/jumpanimation.js" crossorigin="anonymous"></script>
     <title>DOCUMENTS</title>
   </head>
   <body>
