--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-  <h1>DOCUMENTS</h1>
+  <h1><i class="fas fa-file"></i> DOCUMENTS</h1>
       <p class="plist"><i class="fas fa-file-pdf"></i> 
       <a target="_blank" href="https://samictg.ga/certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE</a>
       </p>
