--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
   <h1><i class="far fa-folder-open"></i> DOCUMENTS</h1>
       <p class="plist"><i class="fas fa-file-pdf"></i> 
-      <a target="_blank" href="https://samictg.ga/certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE <i class="fas fa-cloud-download-alt"></i></a>
+      <a target="_blank" href="https://samictg.ga/certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE <i class="downloadbtn fas fa-cloud-download-alt"></i></a>
       </p>
      <p class="plist"><i class="fas fa-file-pdf"></i> 
-      <a target="_blank" href="https://samictg.ga/sanjid-hsc.pdf">SANJID HSC CERTIFICATE <i class="fas fa-cloud-download-alt"></i></a>
+      <a target="_blank" href="https://samictg.ga/sanjid-hsc.pdf">SANJID HSC CERTIFICATE <i class="downloadbtn fas fa-cloud-download-alt"></i></a>
       </p>
       
      </div>
