--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
   <h1><i class="far fa-folder-open"></i> DOCUMENTS</h1>
       <p class="plist"><i class="fas fa-file-pdf"></i> 
-      <a target="_blank" href="https://samictg.ga/certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE <i class="downloadbtn fas fa-cloud-download-alt"></i></a>
+      <a target="_blank" href="certificate.pdf">DIGITAL MARKETING CERTIFICATE - GOOGLE DIGITAL GARAGE <i class="downloadbtn fas fa-cloud-download-alt"></i></a>
       </p>
      <p class="plist"><i class="fas fa-file-pdf"></i> 
       <a target="_blank" href="#">##########<i class="downloadbtn fas fa-cloud-download-alt"></i></a>
